--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or any branch you want to deploy from
+      - main  # Replace with the branch you are deploying from
 
 jobs:
   build:
@@ -18,25 +18,31 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
+        node-version: '18'  # Adjust the Node.js version if needed
 
     # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         npm install
 
-    # Step 4: Build the app
+    # Step 4: Build the app (this generates the dist folder or equivalent)
     - name: Build the app
       run: |
         npm run build
 
-    # Step 5: Set up SSH for GitHub Actions (using the private key stored in secrets)
+    # Step 5: Configure Git user identity
+    - name: Configure Git user identity
+      run: |
+        git config  user.name "Sunil Singh"  # Set your name
+        git config  user.email "sunilsingh09012@gmail.com"  # Set your email
+
+    # Step 6: Set up SSH for GitHub Actions (using the private key stored in secrets)
     - name: Set up SSH for GitHub Actions
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Add your SSH private key to secrets
 
-    # Step 6: Deploy to GitHub Pages using `gh-pages`
+    # Step 7: Deploy to GitHub Pages using `gh-pages`
     - name: Deploy to GitHub Pages
       run: |
         npm run deploy
